FInal changes to upgrade to java 8