@@ -49,10 +49,10 @@
         <aspectj.maven.plugin.version>1.6</aspectj.maven.plugin.version>
         <jersey.version>2.5</jersey.version>
         <!-- next line is the argLine for the maven-surefire-plugin
-             but it must be declare as property because of the jacoco plugin (defined in jupiter parent)
+             but it must be declared as a property because of the jacoco plugin (defined in jupiter parent)
              see http://docs.codehaus.org/display/SONAR/JaCoCo+Plugin
              -->
-        <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m -XX:-UseSplitVerifier</argLine>
+        <argLine>-Xms512m -Xmx1024m</argLine>
     </properties>
 
     <scm>
